# StatisticsVisualizer_made_by_AI

./: .gitignore  CMakeLists.txt  README.md  calculate.cpp  calculate.h  draw.cpp  draw.h  export.cpp  export.h  file.cpp  file.h  globals.h  helperFunctions.h  icons.qrc  import.cpp  import.h  main.cpp  mainwindow.cpp  mainwindow.h  numericDelegate.h  resources.qrc  structs.h  style.qss  tableactions.h
resources/: icons.qrc  resources.qrc  stylesheets.qrc
samples/: gen.py  random_multiline_with_gaps_uneven.txt  random_numbers.csv
src/: calculate.cpp  calculate.h  draw.cpp  draw.h  export.h  globals.h  import.h  mainwindow.cpp  mainwindow.h  structs.h
